--- a/Aula2-Flexbox/index.html
+++ b/Aula2-Flexbox/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 2- Flexbox</title>
+     <style>@import url('https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&display=swap');</style>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <style>
-    #divpai {
-        background-color: rgb(98, 65, 130);
-        height: 200px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+   
 </style>
 
 <body>
